feat: target, id

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "module": "commonjs",
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
