--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "ts-toolbelt": "^8.0.3"
   },
   "devDependencies": {
-    "typescript": "^4.1.0-dev.20201031"
+    "typescript": "^4.1.3"
   }
 }
