--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "ts-toolbelt": "^8.0.3"
   },
   "devDependencies": {
+    "@scion-scxml/test-framework": "^2.0.15",
+    "@types/glob": "^7.1.3",
+    "@types/node": "^14.14.21",
+    "deepdash": "^5.3.5",
+    "endent": "^2.0.1",
+    "glob": "^7.1.6",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
