feat: `MachineInstant` stuff - not-so-perfect scxml spec implementation baring execute content - entry/exit tests from xstate - more stuff that idr

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-    "cSpell.words": ["scxml"],
+    "cSpell.words": [
+        "Lcca",
+        "datamodel",
+        "onentry",
+        "scxml"
+    ],
     "editor.rulers": [
         180
     ],
