--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-  },
-  "exclude": ["isolated-tsc/*"]
+    "noEmit": true
+  }
 }
