--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "endent": "^2.0.1",
     "glob": "^7.1.6",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.4.0-beta"
   }
 }
