--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "name": "txstate",
-  "version": "0.0.0",
-  "private": true,
-  "dependencies": {},
+  "version": "0.0.1",
   "devDependencies": {
-    "@scion-scxml/test-framework": "^2.0.15",
-    "@types/glob": "^7.1.3",
-    "@types/node": "^14.14.21",
-    "deepdash": "^5.3.5",
-    "endent": "^2.0.1",
-    "glob": "^7.1.6",
-    "ts-node": "^9.1.1",
     "typescript": "^4.4.0-beta"
-  }
+  },
+	"repository": "https://github.com/devanshj/txstate",
+	"author": "Devansh Jethmalani",
+	"license": "MIT"
 }
