--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "noEmit": true
+    "outDir": "dist",
+    "declaration": true,
+    "emitDeclarationOnly": true
   }
 }
