--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "txstate",
-  "version": "0.1.1",
-  "main": "index.d.ts",
+  "version": "0.1.2",
+  "main": "./index.d.ts",
   "devDependencies": {
     "readline-sync": "^1.4.10",
     "shelljs": "^0.8.4",
